[metadata]
name = test-pyrock-conchdev
version = 0.0.5
author = ConchDev
author_email = unsoughtconch@gmail.com
description = A wrapper for Mr-Conos's Rock API
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/ConchDev/pyrock
project_urls = 
    Rock API = https://github.com/Mr-Conos/Rock-API
    Source = https://github.com/ConchDev/pyrock
    Tracker = https://github.com/ConchDev/pyrock/issues

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

install_requires = 
    requests,
    aiohttp


license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.5

[options.packages.find]
where = src
